Full sending capability in PPP + CRC + CBOR

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,8 +12,10 @@
 [platformio]
 include_dir = Inc
 src_dir     = Src
+lib_dir = lib
 
 ;=================== VARIANT SELECTION ==========================
+default_envs = VARIANT_PROTOCOL         ; Protocol CBOR Variant
 ;default_envs = VARIANT_DEBUG         ; DEBUG Variant
 ;default_envs = VARIANT_HOVERCAR      ; HOVERCAR Variant
 ;default_envs = VARIANT_HOVERBOARD    ; HOVERBOARD Variant
@@ -26,6 +28,26 @@ platform_packages =
     framework-spl-gd32@https://github.com/CommunityGD32Cores/gd32-pio-spl-package.git#67a6fe90b20e00b11a9a52f55d318b7d15eeed84
 
 ;================================================================
+
+[env:VARIANT_PROTOCOL]
+board           = genericGD32F130C6
+debug_tool      = stlink
+upload_protocol = stlink
+framework       = spl
+board_build.ldscript = ./GD32F130C6T_FLASH.ld
+
+
+; Serial Port settings (make sure the COM port is correct)
+monitor_port    = /dev/ttyUSB0
+monitor_speed   = 115200
+
+build_flags =
+    -IInc
+    -ISrc 
+    -DUSE_STDPERIPH_DRIVER
+    -g -ggdb
+    -Wl,-Map=mem.map
+    -D PROTOCOL
 
 [env:VARIANT_DEBUG]
 board           = genericGD32F130C6
