--- a/platformio.ini
+++ b/platformio.ini
@@ -46,6 +46,7 @@ build_flags =
     -g -ggdb
     -Wl,-Map=mem.map
     -D PROTOCOL
+    -D __LITTLE_ENDIAN__
 
 [env:VARIANT_DEBUG]
 board           = genericGD32F130C6
